chore(Dockerfile): unlock experimental java 8 memory options and add tini