@@ -7,11 +7,12 @@ ENV ZB_HOME=/usr/local/zeebe \
     DEPLOY_ON_KUBERNETES=false \
     BOOTSTRAP=1
 ENV PATH "${ZB_HOME}/bin:${PATH}"
+ENV JAVA_OPTS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
 
 COPY ${DISTBALL} ${ZB_HOME}/
 
 # libc6-compat is required to run rocksdb on alpine
-RUN apk add --no-cache bash libc6-compat && \
+RUN apk add --no-cache bash libc6-compat tini && \
     tar xfvz ${ZB_HOME}/*.tar.gz --strip 1 -C ${ZB_HOME}/ && rm ${ZB_HOME}/*.tar.gz
 
 WORKDIR ${ZB_HOME}
@@ -20,4 +21,4 @@ VOLUME ${ZB_HOME}/data
 
 COPY docker/utils/startup.sh /usr/local/bin
 
-ENTRYPOINT ["/usr/local/bin/startup.sh"]
+ENTRYPOINT ["tini", "--", "/usr/local/bin/startup.sh"]
